main-design.css
/* ... */
.ceo-title{
    font-size: 80px;
    position: absolute;
    margin-left: 655px;
    top: 1255px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-shadow: 2px 2px 4px #000000;
}


.left-photo-section{
    float: left;
    width: 50%;
}
.right-skills{
    float: right;
    width: 50%;
    text-align: center;
    font-size: 70px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    
}
.skills-list{
    list-style-type: none;
}

div.loadingWindow{
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    width: 40%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 20px;
    background: rgb(0, 0, 0);
    box-sizing: border-box;
    /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5); */
    box-shadow: 0px 0px 20px rgb(17, 218, 233);
    border-radius: 10px
}

/* center.WebkitUI{
    padding: 20px;
    box-sizing: border-box;
    border-radius: 10px;
    transform: translate(-50%, -50%);
    width: 40%;
    background: rgb(17, 218, 233);
    margin-left: 1120px;
    margin-top: 500px;

} */

img.SimpleXTeam-Logo{
    height: 500px;
    margin-left: auto;
    margin-right: auto;
    display: block; 
}

.SimpleXTeam-Title{
    /* text-align: center; */
    font-size: 45px;
    color: black;
}

.loadingProgressInfo{
    font-family: sans-serif;
    font-size: 25px;
    letter-spacing: 1px;
}

.ProgressBar{
    background: rgba(212, 203, 203, 0.938);
    border-color: rgb(34, 32, 32);
    border-style: solid;
    box-sizing: border-box;
    width: 100%;
    height: 25px;
    color: aqua;
}

/* progress::-webkit-progress-bar {  
	background-color: rgb(0, 0, 0);
}  
progress::-webkit-progress-value {  
    background-color:aqua;
    border-radius: 3px;
    box-shadow: 0 2px 3px rgba(0, 0, 0, .5) inset;
}  

progress::-moz-progress-bar {  
	background-color: aqua;
} */

.loadWebsiteServer{
    color: aqua;
    width: 100%;
    font-size: 35px;
    background-color: rgb(53, 51, 51);
    display: none;
}

.deviceBody{
    background-color: black;
    /* background-position: left 50px; */
    background-size: 200px;

}


h2.mainTitle, .aboutTitle, .head-PC{
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 55px;
    text-align: center;
    border-style: solid;
    border-width: 2px;
    background-color: #333;
    box-shadow: 0 2px 3px aqua;
    margin-top: 25px;
    width: 440px;
    transition: all ease-in 150ms;
    cursor: default;
}


.aboutTitle{
    text-align: center;
}

head{
    text-align: center;
}

h2.mainTitle:hover{
    box-shadow: 1px 4px 15px aqua;

}

.mainTitle, .aboutTitle{
    animation: enterSlideIn 2s ease-in-out;
}

@keyframes enterSlideIn{
    /* from{margin-right: 1900px; opacity: 0;}
    to{margin-right: 0px; opacity: 1;} */
    0%{
        margin-right: 1900px; opacity: 0;
    }

    50%{
        opacity: 0;
    }

    100%{
        opacity: 1;
    }
}

.mainTitleFadeOut{
    /* keep same formating ~ JQUERY Purpose */
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 55px;
    text-align: center;
    border-style: solid;
    border-width: 2px;
    background-color: #333;
    box-shadow: 0 2px 3px aqua;
    margin-top: 25px;
    width: 440px;
    transition: all ease-in 150ms;
    cursor: default;
    animation: leaveSlideOut 1s ease-in-out;

}

@keyframes leaveSlideOut {
    from{margin-top: 25px; opacity: 1;}
    to{margin-top: 0px; opacity: 0}
}

h2.aboutTitle:hover{
    box-shadow: 1px 4px 15px aqua;
}

p.navTitle{
    color: white;
    font-family: sans-serif;
    font-size: 20px;
    border-style: solid;
    border-color: aqua;
    border-width: 3px;
    float: left;
    margin-right: 15px;
    margin-left: 20px;
    padding: 2px;
    padding-left: 5px;
    padding-right: 5px; 
    background-color: #333;
}

p.navTitle:hover{
    box-shadow: 0px 2px 4px aqua;
}



h2.deviceTitleBox{
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 30px;
}

div.device-infobox{
    border-style: solid;
    border-color: aqua;
    box-shadow: 0px 2px 2px aqua;
    width: 400px;
    padding: 50px;
    color: white;
    font-family: sans-serif;
    text-align: center;
    margin-top: 200px;
    animation: BoxSlideInFadeIn 1s ease-in-out;
}

@keyframes BoxSlideInFadeIn{
    from{
        margin-left: 1500px;
        opacity: 0;
    }
    to{
        margin-left: 0;
        opacity: 1;
    }
}

h2.deviceTitleBox{
    margin-bottom: 50px;
    font-size: 40px;
}

p.deviceType{
    margin-right: 60px;
    border-left-style: solid;
}

p.kernel{
    margin-right: 25px;
    border-left-style: solid;    
}

p.error{
    margin-right: 25px;
    border-left-style: solid;
}

p.engine{
    margin-right: 80px;
    border-left-style: solid;

}

p.platform{
    margin-right: 25px;
    border-left-style: solid;
}

p.browserName{
    margin-right: 40px;
    border-left-style: solid;
}

p.cookiesEnabled{
    margin-right: 25px;
    border-left-style: solid;
}

p.codeName{
    margin-right: 25px;
    border-left-style: solid;
}

p.deviceType, p.kernel, p.error, p.engine, p.platform, p.browserName, p.cookiesEnabled, p.codeName{
    font-size: 25px;
    vertical-align: middle;
}


.load, .super{
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    /* position: absolute; */
    bottom: 1px;
    padding: 150px;
}

/* Sign up Form Design */

.SignUp-Panel{
    width: 20%;
    height: 320px;
    margin: auto;
    margin-top: 270px;
    background-color: rgb(17, 16, 16);
    border-style: solid;
    border-color: aqua;
    box-shadow: 0 2px 4px aqua;

}

.Entry{
    border-radius: 1px;
    border-style: solid;
    border-color: aqua;
    background-color: black;
    color: aqua;
    font-family: Arial, Helvetica, sans-serif;
    padding: 5px;
}
/* ... */

